<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">



    

    <TextView
        android:id="@+id/recipeCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/recipe_category"
        android:textColor="@color/text"
        android:textSize="25sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl1"
        android:layout_marginTop="10dp"
        android:layout_below="@id/recipeCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/search_recipe"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_search"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:layout_marginTop="10dp"
        android:layout_below="@id/tl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:chipSpacing="15dp"
        app:checkedChip="@+id/name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:singleSelection="true"
        android:id="@+id/CG">

        <com.google.android.material.chip.Chip
            android:layout_marginStart="10dp"
            android:id="@+id/cook_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cook_time"
            android:textStyle="bold"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textStyle="bold"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="5dp"
        android:layout_below="@id/CG"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="729dp"
        android:layout_margin="4dp"
        android:padding="3dp"/>



</RelativeLayout>