<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="420dp"
        android:layout_height="550dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/profileImage"
            android:src="@drawable/ic_add_a_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button"/>

        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/yellow"
            android:src="@drawable/ic_add"
            android:layout_toEndOf="@id/profileImage"
            android:layout_marginTop="50dp"
            android:layout_marginStart="15dp"/>

        <ImageButton
            android:layout_below="@+id/btnAdd"
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/red"
            android:layout_toEndOf="@id/profileImage"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"/>



        <RelativeLayout
            android:id="@+id/rel1"
            android:layout_below="@+id/profileImage"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:layout_marginLeft="70dp" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/text"
                android:layout_toRightOf="@id/txt"
                android:layout_marginLeft="40dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_below="@+id/rel1"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/acc_type"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtAccType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:layout_toEndOf="@id/txt1"
                android:layout_marginStart="40dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:textAlignment="center"
            android:id="@+id/rel3"
            android:layout_below="@+id/rel2"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:text="@string/contact"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:layout_toEndOf="@id/txt3"
                android:layout_marginStart="40dp"/>

        </RelativeLayout>

        <Button
            android:id="@+id/getPremium"
            android:layout_marginTop="15dp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel3"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#0D24F3"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/get_premium"
            android:textColor="#44C7FF"/>


        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp">
            <Button
                android:id="@+id/btnSignOut"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:textColor="#AE0000"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#E77171"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnClose"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#8EFF84"
                android:text="@string/close"
                android:background="@drawable/rounded_button"
                android:textColor="#2B9705"
                android:layout_gravity="center"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_marginStart="5dp"/>




        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>