<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RecipeDisplay">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginStart="15dp"
            app:expandedTitleMarginBottom="20dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            >

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>



            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="bottom"
                android:background="@drawable/title_background"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>



    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/crd1"
                app:cardCornerRadius="3dp"
                app:cardElevation="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="12dp"
                        android:textStyle="bold"
                        android:textSize="18sp"/>



                    <TextView
                        android:id="@+id/description"
                        android:layout_below="@id/ds"
                        android:layout_marginTop="6dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_ipsum"/>



                    <HorizontalScrollView
                        android:padding="3dp"
                        android:layout_below="@id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginStart="12dp">

                        <com.google.android.material.chip.ChipGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:singleLine="true"
                            app:chipSpacing="15dp">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/cook_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Time : 25mins"
                                android:textStyle="bold"/>

                            <com.google.android.material.chip.Chip
                                android:id="@+id/rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Rating : 3.5"
                                android:textStyle="bold"/>

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chipFoodType"
                                app:chipIcon="@drawable/ic_veg"
                                app:chipIconVisible="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Veg/Non-Veg"
                                android:textStyle="bold"/>

                        </com.google.android.material.chip.ChipGroup>

                    </HorizontalScrollView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/crd2"
                android:layout_marginTop="5dp"
                android:layout_below="@id/crd1"
                app:cardCornerRadius="3dp"
                app:cardElevation="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="12dp"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <HorizontalScrollView
                        android:layout_below="@id/ig"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TableLayout
                        android:id="@+id/tableLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ig"
                        android:layout_marginTop="6dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="12dp"
                        android:stretchColumns="1"/>

                    </HorizontalScrollView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/crd3"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:layout_below="@id/crd2"-->
<!--                app:cardCornerRadius="3dp"-->
<!--                app:cardElevation="5dp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent">-->

<!--                <RelativeLayout-->
<!--                    android:layout_margin="5dp"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content">-->

<!--                    <TextView-->
<!--                        android:id="@+id/sp"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/spices"-->
<!--                        android:layout_marginTop="12dp"-->
<!--                        android:layout_marginStart="12dp"-->
<!--                        android:textStyle="bold"-->
<!--                        android:textSize="18sp"/>-->

<!--                    <TableLayout-->
<!--                        android:id="@+id/tableLayout2"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_below="@id/sp"-->
<!--                        android:layout_marginTop="6dp"-->
<!--                        android:layout_marginStart="12dp"-->
<!--                        android:layout_marginEnd="5dp"-->
<!--                        android:layout_marginBottom="12dp"-->
<!--                        android:stretchColumns="1"/>-->

<!--                </RelativeLayout>-->

<!--            </androidx.cardview.widget.CardView>-->

            <Button
                android:id="@+id/openSteps"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/let_s_cook"
                android:layout_below="@id/crd2"
                android:backgroundTint="#3C9503"/>




        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|end">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/colorAccent"
            app:srcCompat="@drawable/ic_star"
            android:visibility="invisible"
            tools:ignore="VectorDrawableCompat" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/colorAccent"
            app:srcCompat="@drawable/ic_file_download"
            android:visibility="invisible"
            tools:ignore="VectorDrawableCompat" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_add"
            android:tint="#fff"
            app:fabCustomSize="55dp"
            app:tint="@android:color/white"
            android:background="@color/colorAccent"
            tools:ignore="VectorDrawableCompat" />




    </LinearLayout>
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_favorite_border"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|end|right"
        app:maxImageSize="28dp"
        android:tint="#fff"
        app:tint="#fff"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>